--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,13 +14,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "cypress": "^13.7.1",
     "mdb-vue-ui-kit": "^4.1.1",
-    "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
-    "vite": "^5.0.8"
+    "vite": "^5.2.3",
+    "vue": "^3.4.21"
   }
 }
